# Stray

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: add_feature.yml  bug_report.yml
crates/stray_api/: Cargo.toml
crates/stray_api/src/: events.rs  lib.rs  plugin.rs  settings.rs  stray.rs  window.rs
crates/stray_ecs/: Cargo.toml
crates/stray_internal/: Cargo.toml
crates/stray_internal/src/: lib.rs
crates/stray_material/: Cargo.toml
crates/stray_material/src/: material.rs
crates/stray_physic/: Cargo.toml
crates/stray_physic/src/: lib.rs  rigidbody.rs
crates/stray_render/: Cargo.toml
crates/stray_render/src/: draw.rs  lib.rs  render.rs  render_state.rs
crates/stray_render/src/draw/: draw.rs  mod.rs
crates/stray_render/src/hal/: adapter.rs  instance.rs  mod.rs  surface.rs
crates/stray_render/src/pipeline/: mod.rs  render_pipeline.rs
crates/stray_render/src/pipeline/shaders/: shader.wgsl  shape.wgsl  texture.wgsl
crates/stray_scene/: Cargo.toml
crates/stray_scene/src/: components.rs  engine_data.rs  lib.rs  types.rs
crates/stray_systems/: Cargo.toml
crates/stray_systems/src/: lib.rs  render.rs
crates/stray_texture/: Cargo.toml
crates/stray_texture/src/: lib.rs  texture.rs
examples/: hello_square.rs  hello_triangle.rs  hello_world.rs  input.rs  moving_sprite.rs  physic.rs  rotating_sprite.rs  sprite.rs  window.rs
examples/pong/: ball.rs  main.rs  paddles.rs
hal/: Cargo.toml
hal/src/: backend.rs  device.rs  lib.rs  pipeline.rs  surface.rs
src/: lib.rs
stray_be/: Cargo.toml  build.py
stray_be/python/: example.py
stray_be/python/api/: stray.py
stray_be/src/: lib.rs
