[package]
name = "stray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["modules/*", "thirdparty/*", "extension"]
members = ["crates/*"]


[dependencies]

stray_internal = {path = "crates/stray_internal"}

legion = "0.4.0"
