[package]
name = "stray_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = "0.10.0"
winit = "0.27.5"
pollster = "0.2.5"
legion = "0.4.0"
smaa = "0.8.0"

wgpu = {version = "0.14.2", features = ["glsl"]}
bytemuck = {version = "1.12.3", features = ["derive"]}

stray_material = {path="../stray_material"}
stray_scene = {path="../stray_scene"}
stray_texture = {path="../stray_texture"}
