[package]
name = "stray_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
wgpu = "0.14.2"
image = "0.24.5"

bytemuck = {version = "1.12.3", features = ["derive"]}

stray_texture = {path="../stray_texture"}
stray_material = {path="../stray_material"}