[package]
name = "stray_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22.0"
naga = "0.11.0"
image = "0.24.5"

wgpu = {version = "0.15.0", features = ["glsl"]}
bytemuck = {version = "1.12.3", features = ["derive"]}

stray_texture = {path="../stray_texture"}
stray_material = {path="../stray_material"}