[package]
name = "stray_systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4.0"
naga = "0.11.0"
smaa = "0.8.0"

wgpu = {version = "0.15.0", features = ["glsl"]}

stray_scene = {path="../stray_scene"}
stray_render = {path="../stray_render"}
